--- a/conf/reference.conf
+++ b/conf/reference.conf
@@ -1,4 +1,4 @@
-# This is the main configuration file for the application.
+# This is the main configuration file for the module.
 # ~~~~~
 
 # Secret key
@@ -57,6 +57,5 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
-
-
+# Enable the custom error handler. TODO Remove if not needed.
 play.http.errorHandler=com.mariussoutier.play.module.handler.ErrorHandler
